# filmaffinity-backup

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  codecov.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt  tests.py  utils.py
.github/: GITHUB_PROJECTS.md  PROJECT_SETUP_GUIDE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  roadmap_item.yml
.github/workflows/: bump_version.yml  conda-publish.yml  docker-publish.yml  main.yml  project-automation.yml  publish.yml
docs/: filmaffinity-backup.md  imdb-uploader.md
filmaffinity/: __init__.py  cli.py  exporters.py  scraper.py
imdb_uploader/: __init__.py  browser_automation.py  cli.py  config.py  constants.py  csv_validator.py  prompts.py  uploader.py
recipe/: meta.yaml
tests/: __init__.py  conftest.py  test_cli.py  test_csv_validator.py  test_exporters.py  test_integration.py  test_prompts.py  test_scraper.py  test_uploader.py
